--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -7,9 +7,13 @@
   </head>
 
   <body>
-    <script src="classesPions.js"></script>
+<div id="plateauJeu">
+
+</div>
     <script src="classPlateau.js"></script>
+    <script src="classesPions.js"></script>
     <script src="classJoueur.js"></script>
+    <script src="plateauButtons.js"></script>
   </body>
 
 </html>
