champ pseudo et fonction de récup + plateau à la bonne forme au lancement de la game

--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -7,13 +7,16 @@
   </head>
 
   <body>
-<div id="plateauJeu">
+    <div>
+      <input type="text" id="pseudoquery" placeholder="Entrez votre pseudo"></input>
+    </div>
+    
+    <div id="plateauJeu"></div>
 
-</div>
     <script src="classPlateau.js"></script>
     <script src="classesPions.js"></script>
     <script src="classJoueur.js"></script>
-    <script src="plateauButtons.js"></script>
+    <script src="lancementPartie.js"></script>
   </body>
 
 </html>
