affichage boutons pions joueurs bleu et rouge

--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -10,13 +10,15 @@
     <div>
       <input type="text" id="pseudoquery" placeholder="Entrez votre pseudo"></input>
     </div>
-    
+
     <div id="plateauJeu"></div>
+    <div id="pionsPlayer"></div>
 
     <script src="classPlateau.js"></script>
     <script src="classesPions.js"></script>
-    <script src="classJoueur.js"></script>
     <script src="lancementPartie.js"></script>
+    <script src="classJoueur.js"></script>
+
   </body>
 
 </html>
