placement fini (mtnt il faut suppr le pion placé dans la liste du joueur)

--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -9,9 +9,10 @@
   <body>
     <div>
       <input type="text" id="pseudoquery" placeholder="Entrez votre pseudo"></input>
+      <input type="text" id="pseudoquery2" placeholder="Entrez votre pseudo"></input>
     </div>
 
-    <div id="plateauJeu"></div>
+
     <div id="pionsPlayer"></div>
 
     <script src="classPlateau.js"></script>
