--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -12,7 +12,7 @@
       <input type="text" id="pseudoquery2" placeholder="Entrez votre pseudo"></input>
     </div>
 
-
+    <div id="plateauJeu"></div>
     <div id="pionsPlayer"></div>
 
     <script src="classPlateau.js"></script>
