placementpion temriné + hideopponent

--- a/back/game files/indexGame.html
+++ b/back/game files/indexGame.html
@@ -14,6 +14,7 @@
 
     <div id="plateauJeu"></div>
     <div id="pionsPlayer"></div>
+    <div id="buttons"></div>
 
     <script src="classPlateau.js"></script>
     <script src="classesPions.js"></script>
