--- a/back/game files/index.html
+++ b/back/game files/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Stratego BCDLV</title>
+    <title>Stratego</title>
 
   </head>
 
@@ -12,8 +12,11 @@
       <input type="text" id="pseudoquery2" placeholder="Entrez Pseudo du joueur 2"></input>
     </div>
 
+    <div id="pionsPlayerRed"></div>
+    <br/>
     <div id="plateauJeu"></div>
-    <div id="pionsPlayer"></div>
+    <div id="pionsPlayerBlue"></div>
+    <br/>
     <div id="buttons"></div>
 
     <script src="classPlateau.js"></script>
