--- a/front/html/index.html
+++ b/front/html/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Socket.IO chat</title>
-    <style>
-        body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+<html lang="fr">
+  <head>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="../css/index.css"> <!-- Pour le CSS de la page -->
+      <title>Stratego</title>
+      <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+  </head>
 
-        #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-        #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-        #input:focus { outline: none; }
-        #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+  <body>
+   <div class="main">
+       <div class="container">
+         <h1>Stratego</h1>
+         <p>Il est temps de se battre.</p>
+         <a class="btn" href="jeu.html">Préparez-vous !</a>
+       </div>
+    </div>
 
-        #messages { list-style-type: none; margin: 0; padding: 0; }
-        #messages > li { padding: 0.5rem 1rem; }
-        #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-</head>
-<body>
-<ul id="messages"></ul>
-<form id="form" action="">
-    <input id="input" autocomplete="off" /><button>Send</button>
-</form>
+  <div class="footer">
+    <div class="container">
+        <div class="col">
+            <h2>Préparez</h2>
+            <p>Placer vos troupes de manière tactique.</p>
+        </div>
+        <div class="col">
+              <h2>Affrontez</h2>
+              <p>Mesurer vous à d'autres joueurs. </p>
+        </div>
+        <div class="col">
+              <h2>Gagnez</h2>
+              <p>Remporter la victoire grâce à votre stratégie.</p>
+        </div>
+    <div class="clearfix"></div>
+  </div>
+</div>
+  </body>
 
-<script src="/socket.io/socket.io.js"></script>
-<script>
-    var socket = io();
-</script>
-
-</body>
 </html>
