placement random fonctionnel

--- a/front/html/jeu.html
+++ b/front/html/jeu.html
@@ -36,6 +36,7 @@
          <script src="./../../back/lancementPartie.js"></script>
          <script src="./../../back/classJoueur.js"></script>
          <script src="./../../back/randomPlacement.js"></script>
+         <script src="./../../back/fonctionsPlacement.js"></script>
      </div>
 
 
