--- a/front/html/connexion.html
+++ b/front/html/connexion.html
@@ -2,12 +2,26 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--  Liens Boostrap -->
     <link rel="stylesheet" href="../css/login.css"> <!-- Pour le CSS de la page -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+      <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <title>Stratego - Connexion</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
+  <ul id="menu">
+
+    <li><a href="index.html">Accueil</a></li>
+
+    <li><a href = " jeu.html " > Jouer !</a></li>
+
+    <li><a href="connexion.html">Se connecter</a>
+
+</li>
+</ul>
 
 <div class="wrapper fadeInDown">
     <div id="formContent">
